# ai-foundation

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai_platform/api/: app.py  dependencies.py  errors.py
ai_platform/client/: chat_cli.py
ai_platform/common/: config.py  errors.py  interfaces.py  schemas.py
ai_platform/evaluation/: graders.py  interfaces.py  runner.py  types.py
ai_platform/memory/: in_memory.py  interfaces.py
ai_platform/planning/: interfaces.py  llm_planner.py  types.py
ai_platform/providers/: anthropic_provider.py  interfaces.py  types.py
ai_platform/runtime/: engine.py  stub.py
ai_platform/sandbox/: interfaces.py  subprocess_sandbox.py  types.py
ai_platform/tools/: builtin.py  interfaces.py  registry.py
ai_platform/tracing/: in_memory.py  interfaces.py  types.py
engineer-tutorial/: 00-overview.md  01-gateway.md  02-provider-layer.md  03-runtime.md  04-tool-registry.md  05-memory.md  06-tracing.md  07-evaluation.md  08-deployment.md  09-cli-client.md  10-sandbox.md  11-planning.md
tests/api/: conftest.py  test_auth.py  test_chat_route.py  test_rate_limit.py  test_traces_route.py
tests/client/: test_chat_cli.py
tests/evaluation/: conftest.py  test_graders.py  test_runner.py
tests/memory/: test_in_memory.py
tests/planning/: test_llm_planner.py
tests/providers/: conftest.py  test_anthropic_provider.py
tests/runtime/: conftest.py  test_engine.py
tests/sandbox/: fake_tools.py  test_subprocess_sandbox.py
tests/tools/: test_builtin.py  test_registry.py
(+9 files in other folders)
